css/styles.css
/* COMMON */
*, h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
    font-family: 'Roboto Mono';
    font-style: normal;
}

html, body, .container {
    max-width: 100%;
    overflow-x: hidden;
}

h1 {
    font-weight: 300;
    font-size: 4.5rem;
}

h2 {
    font-weight: 300;
    font-size: 2.75rem;
}

h3 {
    font-weight: 400;
    font-size: 2rem;
}

h4 {
    font-weight: 400;
    font-size: 1.25rem;
    margin: 0;
}

p, p b {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 18px;
    line-height: 2rem;
}

p b {
    font-weight: 700;
}

p.big {
    font-family: 'Roboto Mono';
    font-weight: 300;
    font-size: 24px;
    line-height: 2.5rem;
}

p.bigger {
    font-family: 'Roboto Mono';
    font-weight: 400;
    font-size: 28px;
    line-height: 3rem;
}

p.biggest {
    font-family: 'Roboto Mono';
    font-weight: 400;
    font-size: 60px;
    text-transform: uppercase;
    line-height: 4rem;
    letter-spacing: -0.02em;
}

p.no-mg {
    margin: 0;
}

a {
    color: #0A4EFF;
}

i {
    color: #000000;
}

.top-bar {
    height: 80px;
    padding: 0 60px;
}

.menu li a {
    text-transform: uppercase;
    color: #ffffff;
    font-size: 20px;
}

.section {
    padding: 0px 120px;
}

.section-left {
    padding: 0 0 0 120px;
}

.button {
    background-color: #56BE7D;
    box-shadow: 5px -7px 0px 0px #F0FF92;
    border-radius: 6px;
    font-size: 22px;
}

.benefit-card {
    border-radius: 12px;
    border: none;
    padding: 30px 40px;
}

.icon-sm {
    margin: 10px;
    font-size: 48px;
}

.text-center {
    text-align: center;
}

.mt-sm {
    margin-top: 35px;
}

.mt-md {
    margin-top: 50px;
}

.mt-lg {
    margin-top: 65px;
}

.pt-10 {
    padding-top: 10px;
}
.pb-10 {
    padding-bottom: 10px;
}
.pr-10 {
    padding-right: 10px;
}
.pl-10 {
    padding-left: 10px;
}

/* FIXED */
#code-left {
    position: absolute;
    top: -265px;
    left: -580px;
    z-index: -999;
    transform: rotate(27.86deg);
}

#code-right {
    position: absolute;
    z-index: -999;
    top: -59px;
    right: -550px;
    transform: rotate(12.39deg);
}

#logo {
    position: absolute;
    top: 240px;
    left: 80px;
    z-index: -999;
}

#code-ellipse {
    position: absolute;
    z-index: -999;
    margin-top: 480px;
}

#announcement {
    padding: 60px 0 40px 0;
    background-color: #263852;
    border-radius: 60px 0px 60px 80px;
}

#announcement-logo {
    width: 150px;
    margin-left: 45px;
}

#announcement-cells-left {
    position: absolute;
    width: 300px;
    left: 0;
    margin-top: -20rem;
}

#announcement-cells-right {
    position: absolute;
    width: 600px;
    right: 0;
    margin-top: 8rem;
}

#announcement-epam-logo {
    width: 150px;
    margin-right: 60px;
}

#faq > .section {
    background-color: #FAFFD6;
    border-radius: 0px 100px 100px 100px;
    padding-bottom: 40px;
}

#faq > img {
    position: absolute;
    z-index: -999;
    margin-top: -7rem;
}



.flickity-page-dots {
    right: 300px;
    width: auto;
}

.flickity-page-dots .is-selected {
    background: #70C690;
}

.flickity-prev-next-button {
    width: 100px;
    background: none;
    top: auto;
    bottom: -64px;
    border-radius: auto;
}

.flickity-prev-next-button:hover {
    background: none;
}

.flickity-prev-next-button.next {
    right: 120px;
}

.flickity-prev-next-button.previous {
    right: 580px;
    left: auto;
}

.flickity-prev-next-button .flickity-button-icon {
    width: 120%;
}

@media screen and (min-width: 64em) and (max-width: 89.9375em) {
    #code-left {
        left: -730px;
    }
    #logo {
        width: 200px;
        left: 20px;
        top: 360px;
    }
    #announcement-cells-left {
        margin-top: -27rem;
    }
    #announcement-cells-right {
        margin-top: 17rem;
    }
    .section {
        padding: 0px 60px;
    }
    .section-left {
        padding: 0px 0px 0px 60px;
    }
    .stage {
        width: calc(100% - 60px);
        height: 540px;
    }
}
@media screen and (min-width: 40em) and (max-width: 63.9375em) {
    #code-ellipse, #code-left, #logo, #code-right, #code-rectangle, #announcement-cells-left, #announcement-cells-right, #announcement-logo, #announcement-epam-logo {
        display: none;
    }

    .section {
        padding: 0 30px;
    }
    .section-left {
        padding: 0 0 0 30px;
    }
    .stage {
        width: calc(100% - 30px);
        height: 700px;
    }

    .pr-10 {
        padding-right: 0;
        padding-bottom: 10px;
    }

    .pl-10 {
        padding-left: 0;
        padding-top: 10px;
    }

    .bullets button {
        margin-bottom: 10px;
    }

    .top-bar {
        padding: 0 20px;
    }
    .menu li a {
        padding: 0.35rem 0.5rem;
        font-size: 18px;
    }
}
@media screen and (max-width: 39.9375em) {
    #code-ellipse, #code-left, #logo, #code-right, #code-rectangle, #announcement-cells-left, #announcement-cells-right, #announcement-logo, #announcement-epam-logo {
        display: none;
    }

    .top-bar-left {
        display: none;
    }

    .top-bar {
        padding: 0;
    }

    .title-bar {
        height: 40px;
    }
    .container {
        margin-top: 40px;
    }

    h1 {
        font-size: 3rem;
    }
    h2 {
        font-size: 2.25rem;
    }

    .section {
        padding: 0 15px;
    }

    .pr-10 {
        padding-right: 0;
        padding-bottom: 10px;
    }

    .pl-10 {
        padding-left: 0;
        padding-top: 10px;
    }

    .benefit-card {
        padding: 20px 26px;
    }

    .bullets button {
        margin-bottom: 10px;
    }

    .section-left {
        padding: 0px 0px 0px 15px;
    }
    .stage {
        width: calc(100% - 15px);
        height: 900px;
    }
    .flickity-prev-next-button.next {
        right: 15px;
    }
    .flickity-prev-next-button.previous {
        right: 275px;
    }
    .flickity-page-dots {
        right: 100px;
    }
}

/* COLORS */
.top-bar, .top-bar ul, .title-bar {
    background: #56BE7D;
}

.button:hover, .button:focus {
    background-color: #56BE7D;
}

.text-green {
    color: #56BE7D;
}

.text-white {
    color: #FFFFFF;
}

.button.violet, .button.violet:hover, .button.violet:focus {
    background-color: #594DE1;
}

.benefit-card-green {
    background-color: #CFF8DF;
}

.benefit-card-yellow {
    background-color: #F3FFA8;
}

.margin-top-8 {
    margin-top: 8rem!important;
}

.margin-top-5 {
    margin-top: 5rem!important;
}

.contact {
    display: grid;
    text-align: center;
    color: #000000;
}

